--- a/nosotros.html
+++ b/nosotros.html
@@ -20,11 +20,11 @@
     			<span class="navbar-toggler-icon"></span>
   			</button>
   			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-    			<ul class="navbar-nav mr-auto">
+    			<ul class="navbar-nav mr-auto align-items-center">
       				<li class="nav-item">
         				<a class="nav-link" href="index.html">Home</a>
       				</li>
-      				<li class="nav-item">
+      				<li class="nav-item active">
         				<a class="nav-link" href="nosotros.html">Quiénes somos</a>
       				</li>
       				<li class="nav-item">
@@ -33,16 +33,30 @@
         			<li class="nav-item">
         				<a class="nav-link" href="formulario.html">Contacto</a>
         			</li>
+              <li class="nav-item">
+                <a href="https://www.instagram.com/3rideas_/"><img class="header-redes" src="images/instagram.png"></a>
+              </li>
+              <li class="nav-item">
+                <a href="https://es-es.facebook.com/3RIDEAS"><img class="header-redes" src="images/facebook.png"></a>
+              </li>
+              <li class="nav-item">
+                <a href="https://twitter.com/3rideas"><img class="header-redes" src="images/twitter.png"></a>
+              </li>
+              <li class="nav-item">
+                <a href="https://www.linkedin.com/company/3r-ideas"><img class="header-redes" src="images/linkedin.png"></a>
+              </li>
     			</ul>
 			</div>
 		</nav>		       
   </header>
   <section>
+    <div class="nosotrosBackground">
     	<h1 class="titulo" id="nosotros"><strong>Sobre nosotros</strong></h1>
     	<p class="parrafo">Somos un equipo de profesionales <strong>comprometidos con la construcción de un mundo mejor</strong>.</p>
     	<p class="parrafo">Ayudamos a empresas y organizaciones a <strong>repensar</strong> los procesos en cada una de las etapas de la cadena de valor para  su <strong>reducir</strong>  impacto ambiental.</p>
     	<p class="parrafo">Desarrollamos estrategias, programas de sustentabilidad, proyectos de triple impacto y los ayudamos a comunicarlos de la mejor manera.</p>
     	<p id="nosotrosParrafo">Trabajamos con <strong>innovación</strong>, <strong>desarrollo sostenible</strong> y <strong>economía circular</strong> como pilares.</p>   
+    </div>  
       <div class="grid-nosotros">
     		<div id="nosotros-izquierda">
     		<h2>Juan Manuel Chaname Ciuró Roqué
@@ -83,7 +97,7 @@
       </div>     
     </div>      
     <div id="derechos">
-      <p class="text-light text-center" id="derechosP">Todos los derechos reservados &copy; 2020. Diseñado por <strong>Manuel Lacarra</strong></p>
+      <p class="text-dark text-center" id="derechosP">Todos los derechos reservados &copy; 2020. Diseñado por <strong>Manuel Lacarra</strong></p>
     </div>          
   </footer>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
