--- a/index.html
+++ b/index.html
@@ -25,20 +25,32 @@
     			<span class="navbar-toggler-icon"></span>
   		</button>
   			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-    			<ul class="navbar-nav mr-auto">
-      				<li class="nav-item active">
-        				<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-      				</li>
-      				<li class="nav-item">
-        				<a class="nav-link" href="nosotros.html">Quiénes somos</a>
-      				</li>
-      				<li class="nav-item">
-        				<a class="nav-link" href="servicios.html">Servicios</a>
-        			</li>	
-        			<li class="nav-item">
-        				<a class="nav-link" href="formulario.html">Contacto</a>
-        			</li>
-    			</ul>
+    			<ul class="navbar-nav mr-auto align-items-center">
+      			<li class="nav-item active">
+        			<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+      			</li>
+      			<li class="nav-item">
+      				<a class="nav-link" href="nosotros.html">Quiénes somos</a>
+    				</li>
+    				<li class="nav-item">
+      				<a class="nav-link" href="servicios.html">Servicios</a>
+        		</li>	
+        		<li class="nav-item">
+        			<a class="nav-link" href="formulario.html">Contacto</a>
+        		</li>
+            <li class="nav-item">
+              <a href="https://www.instagram.com/3rideas_/"><img class="header-redes" src="images/instagram.png"></a>
+            </li>
+            <li class="nav-item">
+              <a href="https://es-es.facebook.com/3RIDEAS"><img class="header-redes" src="images/facebook.png"></a>
+            </li>
+            <li class="nav-item">
+              <a href="https://twitter.com/3rideas"><img class="header-redes" src="images/twitter.png"></a>
+            </li>
+            <li class="nav-item">
+              <a href="https://www.linkedin.com/company/3r-ideas"><img class="header-redes" src="images/linkedin.png"></a>
+            </li>
+          </ul>
 			</div>
 		</nav>		    			       	         
 	</header>
@@ -115,7 +127,7 @@
       </div>     
     </div>     	
     <div id="derechos">
-			<p class="text-light text-center" id="derechosP">Todos los derechos reservados &copy; 2020. Diseñado por <strong>Manuel Lacarra</strong></p>
+			<p class="text-dark text-center" id="derechosP">Todos los derechos reservados &copy; 2020. Diseñado por <strong>Manuel Lacarra</strong></p>
 		</div>				  
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
