--- a/servicios.html
+++ b/servicios.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/95df101b02.js" crossorigin="anonymous"></script>
 </head>
 <body>
-	<header class="flex-header">		
+	<header class="flex-header">
         <a href="index.html"><img src="images/3R-IDEAS.png" alt="3R" id="logo"></a> 
         <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="#"></a>
@@ -20,11 +20,11 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav mr-auto align-items-center">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="nosotros.html">Quiénes somos</a>
                     </li>
                     <li class="nav-item">
@@ -33,10 +33,22 @@
                     <li class="nav-item">
                         <a class="nav-link" href="formulario.html">Contacto</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="https://www.instagram.com/3rideas_/"><img class="header-redes" src="images/instagram.png"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://es-es.facebook.com/3RIDEAS"><img class="header-redes" src="images/facebook.png"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://twitter.com/3rideas"><img class="header-redes" src="images/twitter.png"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://www.linkedin.com/company/3r-ideas"><img class="header-redes" src="images/linkedin.png"></a>
+                    </li>
                 </ul>
             </div>
-        </nav>                 
-	</header>
+        </nav>             
+  </header>
     <section>       
             <h1 id="nuestrosServicios"><strong>Nuestros Servicios</strong></h1>
             <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
@@ -103,7 +115,7 @@
       </div>     
     </div>      
     <div id="derechos">
-            <p class="text-light text-center" id="derechosP">Todos los derechos reservados &copy; 2020. Diseñado por <strong>Manuel Lacarra</strong></p>
+            <p class="text-dark text-center" id="derechosP">Todos los derechos reservados &copy; 2020. Diseñado por <strong>Manuel Lacarra</strong></p>
         </div>                
     </footer>    
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
