--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       				<a class="nav-link" href="servicios.html">Servicios</a>
         		</li>	
         		<li class="nav-item">
-        			<a class="nav-link" href="formulario.html">Contacto</a>
+        			<a class="nav-link" href="contacto.html">Contacto</a>
         		</li>
             <li class="nav-item">
               <a href="https://www.instagram.com/3rideas_/"><img class="header-redes" src="images/instagram.png"></a>
@@ -60,50 +60,43 @@
       		<h2>Ayudamos a empresas y organizaciones a <strong>repensar</strong> los procesos en cada una de las etapas de su cadena de valor para <strong>reducir</strong> su impacto ambiental.</h2>
       		<a href="formulario.html" class="btn-get-started">¡Empecemos!</a>
     	</div>
-  	</section>		 	 
-	<section id="why-us" class="why-us">
-      <div class="container" data-aos="fade-up">
-        <div class="row">
-          <div class="col-lg-4 d-flex align-items-stretch">
-            <div class="content">
-              <h3>¿Por qué elegir 3R?</h3>
-              <p class="text-light">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-                Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-8 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-boxes d-flex flex-column justify-content-center">
-              <div class="row">
-                <div class="col-xl-4 d-flex align-items-stretch">
-                  <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-receipt"></i>
-                    <h4>Corporis voluptates sit</h4>
-                    <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
-                  </div>
-                </div>
-                <div class="col-xl-4 d-flex align-items-stretch">
-                  <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-cube-alt"></i>
-                    <h4>Ullamco laboris ladore pan</h4>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-                  </div>
-                </div>
-                <div class="col-xl-4 d-flex align-items-stretch">
-                  <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-images"></i>
-                    <h4>Labore consequatur</h4>
-                    <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
-                  </div>
-                </div>
-              </div>
-            </div><!-- End .content-->
-          </div>
-        </div>
+  </section>
+  <section>
+    <div class="gridIndex">
+      <div id="indexIzquierda">
+        <img src="images/planta.jpg" alt="manos sosteniendo una planta" id="manosPlanta">
       </div>
-    </section><!-- End Why Us Section -->
-	
+      <div id="indexDerecha">
+        <p>Creemos en el poder de las personas para transformar las organizaciones.</p>
+        <p>Creemos en los emprendedores como agentes de cambio y creadores de soluciones a los grandes problemas sociales y ambientales del presente y del futuro.</p>
+        <p>Creemos en el valor y el poder de la articulación y la cooperación entre organizaciones, empresas y emprendedores.</p>
+        <p>Creemos que las empresas del futuro deben tener la sostenibilidad incorporada en su core de negocios.</p>
+        <p>Creamos círculos virtuosos donde todos los involucrados se convierten en actor sociales comprometidos y responsables con el ambiente y sus stakeholders.</p>
+      </div>
+    </div>        
+  </section>		 	 
+	<section>
+    <div class="nuestrosServicios1">
+      <h2 id="nuestrosServicios2"><strong>Nuestros servicios</strong></h2>
+    </div>
+    <div class="gridIndexServicios">
+      <div id="gridIndexServiciosIzquierda">
+        <a href="servicios.html"><img src="images/graph.png" class="imagenesIndexServicios"></a>
+        <h3 class="tituloIndexServicios"><strong>Estrategia y Gestión</strong></h3>
+        <p class="parrafoIndexServicios">Te acompañamos a repensar en cada una de las etapas de la cadena de valor de tu empresa, para redefinir las formas, procesos, materiales e incorporar nuevos actores con los cuales llevarlos a cabo. Trabajamos para que puedan incorporar una nueva visión del mundo y cómo llevar adelante los proyectos.</p>
+      </div>
+      <div id="gridIndexServiciosCentro">
+        <a href="servicios.html#seccionCapacitaciones"><img src="images/training.png" class="imagenesIndexServicios"></a>
+        <h3 class="tituloIndexServicios"><strong>Capacitaciones</strong></h3>
+        <p class="parrafoIndexServicios">Te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que incorporen la sustentabilidad, el cuidado de los recursos, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p>
+      </div>
+      <div id="gridIndexServiciosDerecha">
+        <a href="servicios.html#seccionComunicacion"><img src="images/shout.png" class="imagenesIndexServicios"></a>
+        <h3 class="tituloIndexServicios"><strong>Comunicación de Impacto</strong></h3>
+        <p class="parrafoIndexServicios">Te ayudamos a comunicar lo que tu empresa dice y hace, de manera estratégica, con una imagen profesional y adaptada a cada uno de tus públicos, para que el mensaje llegue de forma adecuada y logre el impacto deseado.</p>
+      </div>    
+    </div>
+  </section>
 	<footer class="bg-dark">
 		<div class="container py-4 footer-grid">
       <div id="ft-izquierda">
