--- a/nosotros.html
+++ b/nosotros.html
@@ -31,7 +31,7 @@
         				<a class="nav-link" href="servicios.html">Servicios</a>
         			</li>	
         			<li class="nav-item">
-        				<a class="nav-link" href="formulario.html">Contacto</a>
+        				<a class="nav-link" href="contacto.html">Contacto</a>
         			</li>
               <li class="nav-item">
                 <a href="https://www.instagram.com/3rideas_/"><img class="header-redes" src="images/instagram.png"></a>
@@ -52,10 +52,9 @@
   <section>
     <div class="nosotrosBackground">
     	<h1 class="titulo" id="nosotros"><strong>Sobre nosotros</strong></h1>
-    	<p class="parrafo">Somos un equipo de profesionales <strong>comprometidos con la construcción de un mundo mejor</strong>.</p>
-    	<p class="parrafo">Ayudamos a empresas y organizaciones a <strong>repensar</strong> los procesos en cada una de las etapas de la cadena de valor para  su <strong>reducir</strong>  impacto ambiental.</p>
-    	<p class="parrafo">Desarrollamos estrategias, programas de sustentabilidad, proyectos de triple impacto y los ayudamos a comunicarlos de la mejor manera.</p>
-    	<p id="nosotrosParrafo">Trabajamos con <strong>innovación</strong>, <strong>desarrollo sostenible</strong> y <strong>economía circular</strong> como pilares.</p>   
+    	<p class="parrafo">3R Ideas es una Consultora de Sustentabilidad y Comunicación nacida de la pasión y el compromiso de sus dos directores por construir un mundo mejor, ambiental y socialmente equilibrado.</p>
+    	<p class="parrafo">Creemos en el poder de las personas para transformar las organizaciones. Por eso trabajamos con los distintos niveles de colaboradores para diseñar, proyectar y comunicar los cambios que cada una necesita.</p>
+    	<p class="parrafo">Los impulsamos a cambiar su visión para poner la sustentabilidad como punto de partida y motor a la hora de pensar los proyectos, seleccionar las materias primas y proveedores, definir y realizar procesos, y vincularse con sus distintos públicos. </p> 
     </div>  
       <div class="grid-nosotros">
     		<div id="nosotros-izquierda">
@@ -105,5 +104,4 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>		
 </body>
 </html>
-	
 	
