--- a/servicios.html
+++ b/servicios.html
@@ -24,14 +24,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="nosotros.html">Quiénes somos</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="servicios.html">Servicios</a>
                     </li>   
                     <li class="nav-item">
-                        <a class="nav-link" href="formulario.html">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.instagram.com/3rideas_/"><img class="header-redes" src="images/instagram.png"></a>
@@ -50,47 +50,66 @@
         </nav>             
   </header>
     <section>       
-            <h1 id="nuestrosServicios"><strong>Nuestros Servicios</strong></h1>
-            <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="images/estrategia.jpg" class="d-block w-100" alt="reunion">
-                        <div class="carousel-caption d-md-block">
-                            <h2 class="text-light"><strong>Estrategias y gestión</strong></h2>
-                            <p class="text-light text-light-p">Consultoría y Auditoría en Sustentabilidad. Estrategias y Programas de Sustentabilidad. Programas de Gestión Integral de Residuos. Formulación de proyectos de economía circular y triple impacto. Consultoría para Certificación como Empresa B. Desarrollo de proyectos público-privado. Alianzas estratégicas.</p>    
-                        </div>
+            <div>
+                <h2 id="estrategiaYGestion"><strong>Estrategia y Gestión</strong></h2>
+                <div class="grid-estrategia bg-dark">
+                    <div id="grid-estrategia-izquierda">
+                       <img src="images/estrategia2.jpg" class="fotos-servicios img-fluid">   
                     </div>
-                    <div class="carousel-item">
-                        <img src="images/evento.jpg" class="d-block w-100" alt="evento">
-                        <div class="carousel-caption d-md-block">
-                            <h2 class="text-light"><strong>Eventos con impacto</strong></h2>
-                            <p class="text-light text-light-p">Talleres de concientización ambiental. Charlas de Economía Circular. Organización de eventos sustentables.</p>                       
-                        </div>
+                    <div id="grid-estrategia-derecha">
+                        <p class="text-light">Te acompañamos a repensar en cada una de las etapas de la cadena de valor de tu empresa, para redefinir las formas, procesos, materiales e incorporar nuevos actores con los cuales llevarlos a cabo. Trabajamos para que puedan incorporar una nueva visión del mundo y cómo llevar adelante los proyectos.</p>
+                        <ul class="text-light">
+                            <li>Consultoría y Auditoría en  Sustentabilidad.</li>
+                            <li>Estrategias y Programas de Sustentabilidad. </li>
+                            <li>Programas de Gestión Integral de Residuos.</li>
+                            <li>Formulación de proyectos de Economía Circular y Triple Impacto.</li>
+                            <li>Implementación de Objetivos de Desarrollo Sostenible.</li>
+                            <li>Certificación como Empresa B y otras certificaciones argentinas.</li>
+                            <li>Desarrollo de proyectos público-privado.</li>
+                            <li>Consultoría en Negocios.</li>
+                            <li>Alianzas Estratégicas.</li>
+                        </ul>
+                    </div>                   
+                 </div>
+            </div>
+            <div>
+                <h2 id="capacitaciones"><strong>Capacitaciones</strong></h2>
+                <div class="grid-capacitaciones" id="seccionCapacitaciones">
+                   <div id="grid-capacitaciones-izquierda">
+                        <p class="text-dark">Te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que incorporen la sustentabilidad, el cuidado de los recursos, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p>
+                        <ul class="text-dark">
+                            <li>Talleres de concientización ambiental.</li>
+                            <li>Charlas de Economía Circular.</li>
+                        </ul>
+                    </div>   
+                    <div  id="grid-capacitaciones-derecha">
+                         <img src="images/capacitacion.jpg" class="fotos-servicios img-fluid">
+                    </div>         
+                </div>       
+            </div>
+            <div>
+                <h2 id="comunicacionDeImpacto"><strong>Comunicación de Impacto</strong></h2>
+                <div class="grid-comunicacion" id="seccionComunicacion">
+                    <div id="grid-comunicacion-izquierda">
+                         <img src="images/like.jpg" class="fotos-servicios img-fluid">
                     </div>
-                    <div class="carousel-item">
-                        <img src="images/like.jpg" class="d-block w-100" alt="neon-like">
-                        <div class="carousel-caption d-md-block">
-                            <h2 class="text-light"><strong>Comunicación de impacto</strong></h2>
-                            <p class="text-light text-light-p">Estrategias de comunicación. Branding. Diseño y desarrollo web. Diseño gráfico.</p>
-                        </div> 
+                    <div id="grid-comunicacion-derecha">
+                        <p class="text-dark">Te ayudamos a comunicar lo que tu empresa dice y hace, de manera estratégica, con una imagen profesional y adaptada a cada uno de tus públicos, para que el mensaje llegue de forma adecuada y logre el impacto deseado.</p>
+                        <ul class="text-dark">
+                            <li>Estrategias de comunicación.</li>
+                            <li>Desarrollo de contenido.</li>
+                            <li>Edición y Corrección de textos.</li>
+                            <li>Branding e Identidad Corporativa.</li>
+                            <li>Diseño y desarrollo web.</li>
+                            <li>Diseño gráfico.</li>
+                            <li>Animaciones.</li>
+                            <li>Ilustración.</li>
+                            <li>Fotografía publicitaria y de producto.</li>
+                            <li>Producción audiovisual.</li>
+                        </ul>
                     </div>
-                    <div>
-                        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                   </div>
-               </div>
-           </div>
+                </div>            
+            </div>
     </section>
     <footer class="bg-dark">
         <div class="container py-4 footer-grid">
