--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="../icofont/icofont.min.css" rel="stylesheet">
   <link href="../boxicons/css/boxicons.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/95df101b02.js" crossorigin="anonymous"></script>	
-
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body>	
 	<header class="flex-header">			 
@@ -39,16 +39,16 @@
         			<a class="nav-link" href="contacto.html">Contacto</a>
         		</li>
             <li class="nav-item">
-              <a href="https://www.instagram.com/3rideas_/"><img class="header-redes" src="images/instagram.png"></a>
+              <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-2x header-redes"></i></a>
             </li>
             <li class="nav-item">
-              <a href="https://es-es.facebook.com/3RIDEAS"><img class="header-redes" src="images/facebook.png"></a>
+              <a href="https://es-es.facebook.com/3RIDEAS" class="nav-link"><i class="fab fa-facebook-square text-secondary fa-2x header-redes"></i></a>
             </li>
             <li class="nav-item">
-              <a href="https://twitter.com/3rideas"><img class="header-redes" src="images/twitter.png"></a>
+              <a href="https://twitter.com/3rideas" class="nav-link"><i class="fab fa-twitter-square text-secondary fa-2x header-redes"></i></a>
             </li>
             <li class="nav-item">
-              <a href="https://www.linkedin.com/company/3r-ideas"><img class="header-redes" src="images/linkedin.png"></a>
+              <a href="https://www.linkedin.com/company/3r-ideas" class="nav-link"><i class="fab fa-linkedin text-secondary fa-2x header-redes"></i></a>
             </li>
           </ul>
 			</div>
@@ -56,15 +56,16 @@
 	</header>
 	<section id="hero" class="d-flex justify-content-center align-items-center">
     	<div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
-      		<h1>3R IDEAS</h1>
-      		<h2>Ayudamos a empresas y organizaciones a <strong>repensar</strong> los procesos en cada una de las etapas de su cadena de valor para <strong>reducir</strong> su impacto ambiental.</h2>
-      		<a href="formulario.html" class="btn-get-started">¡Empecemos!</a>
+      		<h2>Ayudamos a empresas y organizaciones a <strong>repensar</strong></h2>
+          <h2>los procesos en cada una de las etapas de su cadena</h2> 
+          <h2>de valor para <strong>reducir</strong> su impacto ambiental.</h2>      		
+          <a href="contacto.html" class="btn-get-started">¡Empecemos!</a>
     	</div>
   </section>
   <section>
     <div class="gridIndex">
       <div id="indexIzquierda">
-        <img src="images/planta.jpg" alt="manos sosteniendo una planta" id="manosPlanta">
+        <img src="images/lightbulb.jpg" alt="manos sosteniendo una planta" id="manosPlanta">
       </div>
       <div id="indexDerecha">
         <p>Creemos en el poder de las personas para transformar las organizaciones.</p>
@@ -80,17 +81,17 @@
       <h2 id="nuestrosServicios2"><strong>Nuestros servicios</strong></h2>
     </div>
     <div class="gridIndexServicios">
-      <div id="gridIndexServiciosIzquierda">
+      <div class="gridIndexServiciosIzquierda">
         <a href="servicios.html"><img src="images/graph.png" class="imagenesIndexServicios"></a>
         <h3 class="tituloIndexServicios"><strong>Estrategia y Gestión</strong></h3>
         <p class="parrafoIndexServicios">Te acompañamos a repensar en cada una de las etapas de la cadena de valor de tu empresa, para redefinir las formas, procesos, materiales e incorporar nuevos actores con los cuales llevarlos a cabo. Trabajamos para que puedan incorporar una nueva visión del mundo y cómo llevar adelante los proyectos.</p>
       </div>
-      <div id="gridIndexServiciosCentro">
+      <div class="gridIndexServiciosCentro">
         <a href="servicios.html#seccionCapacitaciones"><img src="images/training.png" class="imagenesIndexServicios"></a>
         <h3 class="tituloIndexServicios"><strong>Capacitaciones</strong></h3>
         <p class="parrafoIndexServicios">Te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que incorporen la sustentabilidad, el cuidado de los recursos, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p>
       </div>
-      <div id="gridIndexServiciosDerecha">
+      <div class="gridIndexServiciosDerecha">
         <a href="servicios.html#seccionComunicacion"><img src="images/shout.png" class="imagenesIndexServicios"></a>
         <h3 class="tituloIndexServicios"><strong>Comunicación de Impacto</strong></h3>
         <p class="parrafoIndexServicios">Te ayudamos a comunicar lo que tu empresa dice y hace, de manera estratégica, con una imagen profesional y adaptada a cada uno de tus públicos, para que el mensaje llegue de forma adecuada y logre el impacto deseado.</p>
@@ -98,7 +99,7 @@
     </div>
   </section>
 	<footer class="bg-dark">
-		<div class="container py-4 footer-grid">
+		<div class="container footer-grid">
       <div id="ft-izquierda">
         <img src="images/3R-IDEAS.png" id="footerLogo"> 
       </div>    
@@ -112,10 +113,10 @@
       </div>   
       <div id="ft-derecha">
         <div class="ft-grid-2">
-          <i id="insta-icono" class="fab fa-instagram text-light ft-redes-1" id="insta-enlace"></i><a href="https://www.instagram.com/3rideas_/"><p class="text-white ft-enlaces-1">@3rideas_</p></a>
-          <i id="fb-icono" class="fab fa-facebook-square text-light ft-redes-1" id="fb-icono"></i><a href="https://es-es.facebook.com/3RIDEAS"><p class="text-white ft-enlaces-1" id="fb-enlace">/3R IDEAS</p></a>
-          <i id="tw-icono" class="fab fa-twitter-square text-light ft-redes-1" id="tw-enlace"></i><a href="https://twitter.com/3rideas"><p class="text-white ft-enlaces-1">@3rideas</p></a>
-          <i id="lin-icono" class="fab fa-linkedin text-light ft-redes-1" id="lin-enlace"></i><a href="https://www.linkedin.com/company/3r-ideas"><p class="text-white ft-enlaces-1">3R Ideas</p></a>
+          <i id="insta-icono" class="fab fa-instagram text-light ft-redes-1" ></i><a href="https://www.instagram.com/3rideas_/"><p class="text-white ft-enlaces-1" id="insta-enlace">@3rideas_</p></a>
+          <i id="fb-icono" class="fab fa-facebook-square text-light ft-redes-1"></i><a href="https://es-es.facebook.com/3RIDEAS"><p class="text-white ft-enlaces-1" id="fb-enlace">/3R IDEAS</p></a>
+          <i id="tw-icono" class="fab fa-twitter-square text-light ft-redes-1"></i><a href="https://twitter.com/3rideas"><p class="text-white ft-enlaces-1" id="tw-enlace">@3rideas</p></a>
+          <i id="lin-icono" class="fab fa-linkedin text-light ft-redes-1"></i><a href="https://www.linkedin.com/company/3r-ideas"><p class="text-white ft-enlaces-1" id="lin-enlace">3R Ideas</p></a>
         </div>
       </div>     
     </div>     	
