--- a/contacto.html
+++ b/contacto.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<script src="https://kit.fontawesome.com/95df101b02.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header class="flex-header">
@@ -34,16 +35,16 @@
                 <a class="nav-link" href="contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.instagram.com/3rideas_/"><img class="header-redes" src="images/instagram.png"></a>
+                <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-2x header-redes"></i></a>
               </li>
               <li class="nav-item">
-                <a href="https://es-es.facebook.com/3RIDEAS"><img class="header-redes" src="images/facebook.png"></a>
+                <a href="https://es-es.facebook.com/3RIDEAS" class="nav-link"><i class="fab fa-facebook-square text-secondary fa-2x header-redes"></i></a>
               </li>
               <li class="nav-item">
-                <a href="https://twitter.com/3rideas"><img class="header-redes" src="images/twitter.png"></a>
+                <a href="https://twitter.com/3rideas" class="nav-link"><i class="fab fa-twitter-square text-secondary fa-2x header-redes"></i></a>
               </li>
               <li class="nav-item">
-                <a href="https://www.linkedin.com/company/3r-ideas"><img class="header-redes" src="images/linkedin.png"></a>
+                <a href="https://www.linkedin.com/company/3r-ideas" class="nav-link"><i class="fab fa-linkedin text-secondary fa-2x header-redes"></i></a>
               </li>
           </ul>
       </div>
@@ -84,23 +85,22 @@
 	    	</form>			
 	    </div>
 	    <div class="elementos" id="izquierda">
-				<h2 id="seguinos"><strong>Seguinos en nuestras redes</strong></h2>
         <div class="gridContactoIcons">
-          <i class="fas fa-phone-alt fa-4x" id="tel-icono-contacto"></i><p id="tel-enlace-contacto">+54 911 6141-4804</p>
-          <i class="fas fa-envelope fa-4x" id="mail-icono-contacto"></i><p id="mail-enlace-contacto">hola@3rideas.com</p>
-          <i class="fas fa-map-marker-alt fa-4x" id="map-icono-contacto"></i><p id="map-enlace-contacto">Ciudad Autónoma de Buenos Aires | Argentina </p>
+          <i class="fas fa-phone-alt fa-2x" id="tel-icono-contacto"></i><p id="tel-enlace-contacto">+54 911 6141-4804</p>
+          <i class="fas fa-envelope fa-2x" id="mail-icono-contacto"></i><p id="mail-enlace-contacto">hola@3rideas.com</p>
+          <i class="fas fa-map-marker-alt fa-2x" id="map-icono-contacto"></i><p id="map-enlace-contacto">Ciudad Autónoma de Buenos Aires | Argentina </p>
         </div>
         <div class="flexRedesContacto">
-          <a href="https://www.instagram.com/3rideas_/"><i class="fab fa-instagram fa-4x text-dark redesContacto"></i></a>
-          <a href="https://es-es.facebook.com/3RIDEAS"><i class="fab fa-facebook-square fa-4x text-dark redesContacto"></i></a>
-          <a href="https://twitter.com/3rideas"><i class="fab fa-twitter-square fa-4x text-dark redesContacto"></i></a>
-          <a href="https://www.linkedin.com/company/3r-ideas"><i class="fab fa-linkedin fa-4x text-dark redesContacto"></i></a>
+          <a href="https://www.instagram.com/3rideas_/"><i class="fab fa-instagram fa-2x text-dark redesContacto"></i></a>
+          <a href="https://es-es.facebook.com/3RIDEAS"><i class="fab fa-facebook-square fa-2x text-dark redesContacto"></i></a>
+          <a href="https://twitter.com/3rideas"><i class="fab fa-twitter-square fa-2x text-dark redesContacto"></i></a>
+          <a href="https://www.linkedin.com/company/3r-ideas"><i class="fab fa-linkedin fa-2x text-dark redesContacto"></i></a>
         </div>     
       </div>
     </div>
 	</section>
 	<footer class="bg-dark">
-		<div class="container py-4 footer-grid">
+		<div class="container footer-grid">
       <div id="ft-izquierda">
         <img src="images/3R-IDEAS.png" id="footerLogo"> 
       </div>    
