--- a/nosotros.html
+++ b/nosotros.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/95df101b02.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header class="flex-header">
@@ -34,23 +35,23 @@
         				<a class="nav-link" href="contacto.html">Contacto</a>
         			</li>
               <li class="nav-item">
-                <a href="https://www.instagram.com/3rideas_/"><img class="header-redes" src="images/instagram.png"></a>
+                <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-2x header-redes"></i></a>
               </li>
               <li class="nav-item">
-                <a href="https://es-es.facebook.com/3RIDEAS"><img class="header-redes" src="images/facebook.png"></a>
+                <a href="https://es-es.facebook.com/3RIDEAS" class="nav-link"><i class="fab fa-facebook-square text-secondary fa-2x header-redes"></i></a>
               </li>
               <li class="nav-item">
-                <a href="https://twitter.com/3rideas"><img class="header-redes" src="images/twitter.png"></a>
+                <a href="https://twitter.com/3rideas" class="nav-link"><i class="fab fa-twitter-square text-secondary fa-2x header-redes"></i></a>
               </li>
               <li class="nav-item">
-                <a href="https://www.linkedin.com/company/3r-ideas"><img class="header-redes" src="images/linkedin.png"></a>
+                <a href="https://www.linkedin.com/company/3r-ideas" class="nav-link"><i class="fab fa-linkedin text-secondary fa-2x header-redes"></i></a>
               </li>
     			</ul>
 			</div>
 		</nav>		       
   </header>
   <section>
-    <div class="nosotrosBackground">
+    <div id="nosotrosBackground">
     	<h1 class="titulo" id="nosotros"><strong>Sobre nosotros</strong></h1>
     	<p class="parrafo">3R Ideas es una Consultora de Sustentabilidad y Comunicación nacida de la pasión y el compromiso de sus dos directores por construir un mundo mejor, ambiental y socialmente equilibrado.</p>
     	<p class="parrafo">Creemos en el poder de las personas para transformar las organizaciones. Por eso trabajamos con los distintos niveles de colaboradores para diseñar, proyectar y comunicar los cambios que cada una necesita.</p>
@@ -68,13 +69,13 @@
     		  <h2>Vanina Estrugo
 				  <br><small class="text-muted">Directora</small>
 			    </h2>	  		
-    	     <img class="directores" src="images/vanina.jfif" alt="vanina" id="vanina">
+    	     <img class="directores" src="images/vanina.jpg" alt="vanina" id="vanina">
     			 <p class="parrafo">Emprendedora por naturaleza, es Licenciada en Relaciones Públicas con orientación en Imagen Empresaria, Organizadora de Eventos y Técnica en Ceremonial y Protocolo. Cuenta con más de 17 años de experiencia en el campo de la comunicación y una larga trayectoria en gestión de proyectos. Se dedica a la consultoría y el desarrollo de estrategias integrales para empresas, organismos no gubernamentales y emprendimientos, llevando la innovación y sostenibilidad a la gestión de los negocios.</p>    
     		</div>   
       </div>   	
 	</section>
 	<footer class="bg-dark">
-    <div class="container py-4 footer-grid">
+    <div class="container footer-grid">
       <div id="ft-izquierda">
         <img src="images/3R-IDEAS.png" id="footerLogo"> 
       </div>    
