--- a/servicios.html
+++ b/servicios.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/95df101b02.js" crossorigin="anonymous"></script>
 </head>
@@ -32,87 +33,103 @@
                     </li>   
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
+                    <li class="nav-item">
+                        <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-2x header-redes"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://www.instagram.com/3rideas_/"><img class="header-redes" src="images/instagram.png"></a>
+                        <a href="https://es-es.facebook.com/3RIDEAS" class="nav-link"><i class="fab fa-facebook-square text-secondary fa-2x header-redes"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://es-es.facebook.com/3RIDEAS"><img class="header-redes" src="images/facebook.png"></a>
+                        <a href="https://twitter.com/3rideas" class="nav-link"><i class="fab fa-twitter-square text-secondary fa-2x header-redes"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://twitter.com/3rideas"><img class="header-redes" src="images/twitter.png"></a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="https://www.linkedin.com/company/3r-ideas"><img class="header-redes" src="images/linkedin.png"></a>
+                        <a href="https://www.linkedin.com/company/3r-ideas" class="nav-link"><i class="fab fa-linkedin text-secondary fa-2x header-redes"></i></a>
                     </li>
                 </ul>
             </div>
         </nav>             
   </header>
-    <section>       
-            <div>
-                <h2 id="estrategiaYGestion"><strong>Estrategia y Gestión</strong></h2>
-                <div class="grid-estrategia bg-dark">
-                    <div id="grid-estrategia-izquierda">
-                       <img src="images/estrategia2.jpg" class="fotos-servicios img-fluid">   
-                    </div>
-                    <div id="grid-estrategia-derecha">
-                        <p class="text-light">Te acompañamos a repensar en cada una de las etapas de la cadena de valor de tu empresa, para redefinir las formas, procesos, materiales e incorporar nuevos actores con los cuales llevarlos a cabo. Trabajamos para que puedan incorporar una nueva visión del mundo y cómo llevar adelante los proyectos.</p>
-                        <ul class="text-light">
-                            <li>Consultoría y Auditoría en  Sustentabilidad.</li>
-                            <li>Estrategias y Programas de Sustentabilidad. </li>
-                            <li>Programas de Gestión Integral de Residuos.</li>
-                            <li>Formulación de proyectos de Economía Circular y Triple Impacto.</li>
-                            <li>Implementación de Objetivos de Desarrollo Sostenible.</li>
-                            <li>Certificación como Empresa B y otras certificaciones argentinas.</li>
-                            <li>Desarrollo de proyectos público-privado.</li>
-                            <li>Consultoría en Negocios.</li>
-                            <li>Alianzas Estratégicas.</li>
-                        </ul>
-                    </div>                   
-                 </div>
+    <section>
+        <div class="gridIndexServicios">
+            <div class="gridIndexServiciosIzquierda">
+                <a href="servicios.html#seccionEstrategia"><img src="images/graph.png" class="imagenesIndexServicios mt-5"></a>
+                <h3 class="tituloIndexServicios"><strong>Estrategia y Gestión</strong></h3>  
             </div>
-            <div>
+            <div class="gridIndexServiciosCentro">
+                <a href="servicios.html#seccionCapacitaciones"><img src="images/training.png" class="imagenesIndexServicios mt-5"></a>
+                <h3 class="tituloIndexServicios"><strong>Capacitaciones</strong></h3> 
+            </div>
+             <div class="gridIndexServiciosDerecha">
+                <a href="servicios.html#seccionComunicacion"><img src="images/shout.png" class="imagenesIndexServicios mt-5"></a>
+                <h3 class="tituloIndexServicios"><strong>Comunicación de Impacto</strong></h3> 
+            </div>
+        </div>           
+        <div id="seccionEstrategia">
+            <h2 id="estrategiaYGestion"><strong>Estrategia y Gestión</strong></h2>
+            <div class="grid-estrategia">
+                <div id="grid-estrategia-izquierda">
+                    <img src="images/plan-illustration.png" class="fotos-servicios img-fluid">   
+                </div>
+                <div id="grid-estrategia-derecha">
+                    <p>Te acompañamos a repensar en cada una de las etapas de la cadena de valor de tu empresa, para redefinir las formas, procesos, materiales e incorporar nuevos actores con los cuales llevarlos a cabo. Trabajamos para que puedan incorporar una nueva visión del mundo y cómo llevar adelante los proyectos.</p>
+                    <ul class="text-dark">
+                        <li>Consultoría y Auditoría en  Sustentabilidad.</li>
+                        <li>Estrategias y Programas de Sustentabilidad. </li>
+                        <li>Programas de Gestión Integral de Residuos.</li>
+                        <li>Formulación de proyectos de Economía Circular y Triple Impacto.</li>
+                        <li>Implementación de Objetivos de Desarrollo Sostenible.</li>
+                        <li>Certificación como Empresa B y otras certificaciones argentinas.</li>
+                        <li>Desarrollo de proyectos público-privado.</li>
+                        <li>Consultoría en Negocios.</li>
+                        <li>Alianzas Estratégicas.</li>
+                    </ul>
+                </div>                   
+            </div>
+        </div>
+        <div id="seccionCapacitaciones">
+            <div class="flex-rama">
+                <img src="images/treeBranch.png" alt="rama" id="branch">
                 <h2 id="capacitaciones"><strong>Capacitaciones</strong></h2>
-                <div class="grid-capacitaciones" id="seccionCapacitaciones">
-                   <div id="grid-capacitaciones-izquierda">
-                        <p class="text-dark">Te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que incorporen la sustentabilidad, el cuidado de los recursos, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p>
-                        <ul class="text-dark">
-                            <li>Talleres de concientización ambiental.</li>
-                            <li>Charlas de Economía Circular.</li>
-                        </ul>
-                    </div>   
-                    <div  id="grid-capacitaciones-derecha">
-                         <img src="images/capacitacion.jpg" class="fotos-servicios img-fluid">
-                    </div>         
-                </div>       
-            </div>
-            <div>
-                <h2 id="comunicacionDeImpacto"><strong>Comunicación de Impacto</strong></h2>
-                <div class="grid-comunicacion" id="seccionComunicacion">
-                    <div id="grid-comunicacion-izquierda">
-                         <img src="images/like.jpg" class="fotos-servicios img-fluid">
-                    </div>
-                    <div id="grid-comunicacion-derecha">
-                        <p class="text-dark">Te ayudamos a comunicar lo que tu empresa dice y hace, de manera estratégica, con una imagen profesional y adaptada a cada uno de tus públicos, para que el mensaje llegue de forma adecuada y logre el impacto deseado.</p>
-                        <ul class="text-dark">
-                            <li>Estrategias de comunicación.</li>
-                            <li>Desarrollo de contenido.</li>
-                            <li>Edición y Corrección de textos.</li>
-                            <li>Branding e Identidad Corporativa.</li>
-                            <li>Diseño y desarrollo web.</li>
-                            <li>Diseño gráfico.</li>
-                            <li>Animaciones.</li>
-                            <li>Ilustración.</li>
-                            <li>Fotografía publicitaria y de producto.</li>
-                            <li>Producción audiovisual.</li>
-                        </ul>
-                    </div>
-                </div>            
-            </div>
+            </div>    
+            <div class="grid-capacitaciones">
+                <div id="grid-capacitaciones-izquierda">
+                    <p class="text-dark">Te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que incorporen la sustentabilidad, el cuidado de los recursos, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p>
+                    <ul class="text-dark">
+                        <li>Talleres de concientización ambiental.</li>
+                        <li>Charlas de Economía Circular.</li>
+                    </ul>
+                </div>   
+                <div  id="grid-capacitaciones-derecha">
+                    <img src="images/presentation.png" class="fotos-servicios img-fluid">
+                </div>         
+            </div>       
+        </div>
+        <div id="seccionComunicacion">
+            <h2 id="comunicacionDeImpacto"><strong>Comunicación de Impacto</strong></h2>
+            <div class="grid-comunicacion">
+                <div id="grid-comunicacion-izquierda">
+                    <img src="images/hashtagg.png" class="img-fluid fotos-servicios">
+                </div>
+                <div id="grid-comunicacion-derecha">
+                    <p class="text-dark">Te ayudamos a comunicar lo que tu empresa dice y hace, de manera estratégica, con una imagen profesional y adaptada a cada uno de tus públicos, para que el mensaje llegue de forma adecuada y logre el impacto deseado.</p>
+                    <ul class="text-dark">
+                        <li>Estrategias de comunicación.</li>
+                        <li>Desarrollo de contenido.</li>
+                        <li>Edición y Corrección de textos.</li>
+                        <li>Branding e Identidad Corporativa.</li>
+                        <li>Diseño y desarrollo web.</li>
+                        <li>Diseño gráfico.</li>
+                        <li>Animaciones.</li>
+                        <li>Ilustración.</li>
+                        <li>Fotografía publicitaria y de producto.</li>
+                        <li>Producción audiovisual.</li>
+                    </ul>
+                </div>
+            </div>            
+        </div>
     </section>
     <footer class="bg-dark">
-        <div class="container py-4 footer-grid">
+        <div class="container footer-grid">
       <div id="ft-izquierda">
         <img src="images/3R-IDEAS.png" id="footerLogo"> 
       </div>    
